refactor: update java deprecation