@@ -12,6 +12,7 @@ import thunder.hack.setting.Setting;
 import thunder.hack.setting.impl.*;
 
 import java.io.*;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
@@ -118,7 +119,7 @@ public class ConfigManager implements IManager {
 
     public void loadCloud(String name) {
         Command.sendMessage(isRu() ? "Загружаю.." : "Downloading..");
-        try (BufferedInputStream in = new BufferedInputStream(new URL("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/configs/" + name + ".th").openStream());
+        try (BufferedInputStream in = new BufferedInputStream(URI.create("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/configs/" + name + ".th").toURL().openStream());
              FileOutputStream fileOutputStream = new FileOutputStream(new File(CONFIGS_FOLDER, name + ".th"))) {
             byte[] dataBuffer = new byte[1024];
             int bytesRead;
@@ -326,8 +327,6 @@ public class ConfigManager implements IManager {
 
     public JsonObject getModuleObject(@NotNull Module m) {
         JsonObject attribs = new JsonObject();
-        JsonParser jp = new JsonParser();
-
         for (Setting setting : m.getSettings()) {
             if (setting.getValue() instanceof ColorSetting color) {
                 JsonArray array = new JsonArray();
@@ -340,18 +339,18 @@ public class ConfigManager implements IManager {
                 array.add(new JsonPrimitive(pos.getY()));
                 attribs.add(setting.getName(), array);
             } else if (setting.getValue() instanceof BooleanSettingGroup bGroup) {
-                attribs.add(setting.getName(), jp.parse(String.valueOf(bGroup.isEnabled())));
+                attribs.add(setting.getName(), JsonParser.parseString(String.valueOf(bGroup.isEnabled())));
             } else if (setting.getValue() instanceof Bind b) {
                 JsonArray array = new JsonArray();
                 if (b.isMouse())
-                    array.add(jp.parse(b.getBind()));
+                    array.add(JsonParser.parseString(b.getBind()));
                 else
                     array.add(new JsonPrimitive(b.getKey()));
                 array.add(new JsonPrimitive(b.isHold()));
                 attribs.add(setting.getName(), array);
             } else if (setting.getValue() instanceof String str) {
                 try {
-                    attribs.add(setting.getName(), jp.parse(str.replace(" ", "%%").replace("/", "++")));
+                    attribs.add(setting.getName(), JsonParser.parseString(str.replace(" ", "%%").replace("/", "++")));
                 } catch (Exception ignored) {
                 }
             } else if (setting.getValue() instanceof ItemSelectSetting iSelect) {
@@ -363,7 +362,7 @@ public class ConfigManager implements IManager {
                 attribs.add(setting.getName(), new EnumConverter(((Enum) setting.getValue()).getClass()).doForward((Enum) setting.getValue()));
             } else {
                 try {
-                    attribs.add(setting.getName(), jp.parse(setting.getValue().toString()));
+                    attribs.add(setting.getName(), JsonParser.parseString(setting.getValue().toString()));
                 } catch (Exception ignored) {
                 }
             }
@@ -402,7 +401,7 @@ public class ConfigManager implements IManager {
     public List<String> getCloudConfigs() {
         List<String> list = new ArrayList<>();
         try {
-            URL url = new URL("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/cloudConfigs.txt");
+            URL url = URI.create("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/cloudConfigs.txt").toURL();
             BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
             String inputLine;
             while ((inputLine = in.readLine()) != null)
