@@ -17,6 +17,7 @@ import thunder.hack.utility.ThunderUtility;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 
@@ -50,7 +51,7 @@ public class MixinPlayerListEntry {
 
         Util.getMainWorkerExecutor().execute(() -> {
             try {
-                URL capesList = new URL("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/capes/capeBase.txt");
+                URL capesList = URI.create("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/capes/capeBase.txt").toURL();
                 BufferedReader in = new BufferedReader(new InputStreamReader(capesList.openStream()));
                 String inputLine;
                 while ((inputLine = in.readLine()) != null) {
