@@ -13,6 +13,7 @@ import thunder.hack.ThunderHack;
 import thunder.hack.utility.math.MathUtility;
 
 import java.io.*;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -56,7 +57,7 @@ public final class ThunderUtility {
 
     public static void syncVersion() {
         try {
-            if (!new BufferedReader(new InputStreamReader(new URL("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/syncVersion121.txt").openStream())).readLine().equals(ThunderHack.VERSION))
+            if (!new BufferedReader(new InputStreamReader(URI.create("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/syncVersion121.txt").toURL().openStream())).readLine().equals(ThunderHack.VERSION))
                 ThunderHack.isOutdated = true;
         } catch (Exception ignored) {
         }
@@ -67,7 +68,7 @@ public final class ThunderUtility {
 
         try {
             for (int page = 1; page <= 3; page++) {
-                URL url = new URL("https://api.github.com/repos/Pan4ur/ThunderHack-Recode/stargazers?per_page=100&page=" + page);
+                URL url = URI.create("https://api.github.com/repos/Pan4ur/ThunderHack-Recode/stargazers?per_page=100&page=" + page).toURL();
                 BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
                 StringBuilder response = new StringBuilder();
                 String inputLine;
@@ -92,7 +93,7 @@ public final class ThunderUtility {
 
     public static void syncContributors() {
         try {
-            URL list = new URL("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/thTeam.txt");
+            URL list = URI.create("https://raw.githubusercontent.com/Pan4ur/THRecodeUtil/main/thTeam.txt").toURL();
             BufferedReader in = new BufferedReader(new InputStreamReader(list.openStream(), StandardCharsets.UTF_8));
             String inputLine;
             int i = 0;
@@ -129,7 +130,7 @@ public final class ThunderUtility {
 
     public static void parseCommits() {
         try {
-            URL url = new URL("https://api.github.com/repos/Pan4ur/ThunderHack-Recode/commits?per_page=50");
+            URL url = URI.create("https://api.github.com/repos/Pan4ur/ThunderHack-Recode/commits?per_page=50").toURL();
             BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8));
 
             changeLog.add("Changelog [Recode; Date: " + ThunderHack.BUILD_DATE + "; GitHash:" + ThunderHack.GITHUB_HASH + "]");
